--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-<link href="bootstrap-5/bootstrap.min.css" rel="stylesheet">
 
+<link href="bootstrap-5.0.0-beta3-dist/css/bootstrap.css" rel="stylesheet">
+<link href="estilo.css" rel="stylesheet">
 
-
-<link href="css/estilo.css" rel="stylesheet">
 </head>
 
 
@@ -24,12 +22,13 @@
 <body>
 
     <main class="container">
-        <h1> calculadora de dolar para reais <h1>
+        <h1> <abbr title="$$">calculadora de dolar para reais</abbr> <h1>
+<div class="caixa-da-resp"><p clas="resp"> </p></div>
     </main>
 
 
 
-<script src="bootstrap-5/bootstrap.bundle.min.js"></script>
+<script src="bootstrap-5.0.0-beta3-dist/js/bootstrap.js"></script>
 <script src="funcoes.js"></script>
 </body>
 
